Split files for clarity