@@ -5,11 +5,8 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.function.BinaryOperator;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -32,7 +29,7 @@ class MiscFunctionsTest {
     <T> void testDistinct(List<T> originalList) {
         List<T> expected = originalList.stream()
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
         
         List<T> actual = MiscFunctions.distinct(originalList);
         
@@ -64,48 +61,6 @@ class MiscFunctionsTest {
         }
     }
     
-    @ParameterizedTest
-    @MethodSource("listAndComparator")
-    <T> void testMin(List<T> originalList, Comparator<? super T> comparator) {
-        Optional<T> expected = originalList.stream().min(comparator);
-        Optional<T> actual = MiscFunctions.min(originalList, comparator);
-        
-        if (expected.isEmpty()) {
-            assertTrue(actual.isEmpty());
-        } else {
-            assertTrue(actual.isPresent());
-            assertEquals(expected.get(), actual.get());
-        }
-    }
-    
-    @ParameterizedTest
-    @MethodSource("listAndComparator")
-    <T> void testMax(List<T> originalList, Comparator<? super T> comparator) {
-        Optional<T> expected = originalList.stream().max(comparator);
-        Optional<T> actual = MiscFunctions.max(originalList, comparator);
-        
-        if (expected.isEmpty()) {
-            assertTrue(actual.isEmpty());
-        } else {
-            assertTrue(actual.isPresent());
-            assertEquals(expected.get(), actual.get());
-        }
-    }
-    
-    @ParameterizedTest
-    @MethodSource("listAndAccumulator")
-    <T> void testReduce(List<T> originalList, BinaryOperator<T> accumulator) {
-        Optional<T> expected = originalList.stream().reduce(accumulator);
-        Optional<T> actual = MiscFunctions.reduce(originalList, accumulator);
-        
-        if (expected.isEmpty()) {
-            assertTrue(actual.isEmpty());
-        } else {
-            assertTrue(actual.isPresent());
-            assertEquals(expected.get(), actual.get());
-        }
-    }
-    
     static Stream<Arguments> originalListOnly() {
         return Stream.of(
                 Arguments.of(Collections.emptyList()),
@@ -113,43 +68,4 @@ class MiscFunctionsTest {
                 Arguments.of(List.of("toto", "tata", "tutu")));
     }
     
-    static Stream<Arguments> listAndComparator() {
-        return Stream.of(
-                Arguments.of(Collections.emptyList(), Comparator.naturalOrder()),
-                Arguments.of(Collections.emptyList(), Comparator.reverseOrder()),
-                Arguments.of(List.of(1, 1, 2, 3, 5, 5, 10, 12), Comparator.naturalOrder()),
-                Arguments.of(List.of(1, 1, 2, 3, 5, 5, 10, 12), Comparator.reverseOrder()),
-                Arguments.of(List.of("toto", "tata", "tutu"), Comparator.naturalOrder()),
-                Arguments.of(List.of("toto", "tata", "tutu"), Comparator.reverseOrder()));
-    }
-    
-    static Stream<Arguments> listAndAccumulator() {
-        return Stream.of(
-                // Operation on no elements
-                Arguments.of(Collections.emptyList(), sum()),
-                Arguments.of(Collections.emptyList(), product()),
-                Arguments.of(Collections.emptyList(), concat()),
-                
-                // Operation on many elements
-                Arguments.of(List.of(1, 2, 3, 4, 5), sum()),
-                Arguments.of(List.of(1, 2, 3, 4, 5), product()),
-                Arguments.of(List.of("toto", "tata", "tutu"), concat()),
-                
-                // Operation on exactly 1 (one) element
-                Arguments.of(List.of(1), sum()),
-                Arguments.of(List.of(1), product()),
-                Arguments.of(List.of("toto"), concat()));
-    }
-    
-    private static BinaryOperator<Integer> sum() {
-        return Integer::sum;
-    }
-    
-    private static BinaryOperator<Integer> product() {
-        return (Integer a, Integer b) -> a * b;
-    }
-    
-    private static BinaryOperator<String> concat() {
-        return (String a, String b) -> a + b;
-    }
 }
